Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Links are not underlined when hovered, this provides more feedback for the user.
- The "footer" base box is now replaced by a "contact" text box that makes it
  now possible to change its content through the box management user interface.
Bug fixes:
~~~~~~~~~~
- getHtmlBody is working again.
- Load method in ImageBox was using CLIENT_HOME instead of INSTANCE_HOME
- Replaced "&#153;" by "&trade;" because it was doing validation errors
  (justified or not).
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Removed useless tags in box_lib.pt.
- Replaced <table> garbage by <dl><dt></dt><dd></dd></dl> markup in
  box_create_form.pt.