@@ -6,6 +6,10 @@ New features:
 - Links are not underlined when hovered, this provides more feedback for the user.
 - The "footer" base box is now replaced by a "contact" text box that makes it
   now possible to change its content through the box management user interface.
+- Upon client requests, a checkout version of a document can only be checked-in
+  or abandoned by its owner, that is not the owner of the original document but
+  the owner of the checked-out version ie the user who did the checkout. This is
+  now more intuitive.
 Bug fixes:
 ~~~~~~~~~~
 - getHtmlBody is working again.
